# poetry-test

./: Dockerfile  README.md  pyproject.toml
testdots/cooltest/: constants.py
tests/: test_cooltest.py  test_mynamespace.py
