[tool.poetry]
name = "mynamespace.mypackage"
version = "0.1.0"
description = "Test namespace pacakges with different poetry versions."
authors = ["Daniel Holland <danielholland414@gmail.com>"]
readme = "README.md"
packages = [{ include = "mynamespace" }]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
